src/test/deca/context/valid/sansObjet/FloatAffectationToInt.deca
{
    float x ;
    int a = 10;
    x = a;
}