src/test/deca/context/invalid/object/badInit.deca
class Y
{

}
class X
{
  int a;
  boolean b = true;
}


class B
{
  Y y = new Y();
  float a;

}
{
  X x = new X();
  Y e = (Object)(x);
}
